tests/ui/invalid-ident.stderr
error: not a valid identifier
 --> $DIR/invalid-ident.rs:2:8
  |
2 |     fn [<0 f>]() {}
  |        ^^^^^^^
